2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
	
	* src/bookmarks/ephy-bookmarks-export.c: (write_rdf):

	Don't export the local bookmarks.

	* src/bookmarks/ephy-bookmarks-menu.c: (append_menu):

	Remove "name" attribute in the UI string, since it's set
	to same value as "action".

	* src/bookmarks/ephy-open-tabs-action.c: (node_added_cb):
	
	Fix untranslated string!

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
	
	* lib/ephy-gui.c:
	* lib/ephy-gui.h:

	Remove ephy_gui_window_present.

2006-02-14  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-file-helpers.c: (ephy_file_helpers_init),
	(ephy_file_helpers_shutdown), (ephy_file_delete_on_exit),
	(ephy_file_monitor_cancel), (ephy_file_delete_directory):
	* lib/ephy-file-helpers.h:
	* src/ephy-main.c: (main):

	Move --private-instance out of debug #ifdef.

2006-02-13  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (resolve_cb), (browse_cb),
	(ephy_local_bookmarks_init), (ephy_local_bookmarks_stop),
	(ephy_bookmarks_finalize), (ephy_bookmarks_new):

	Fix crash when resolve returns an error, bug #331028.
	Restructure 0conf code.

2006-02-13  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (add_to_favorites),
	(history_site_visited_cb), (history_cleared_cb),
	(get_id_for_service), (get_node_for_service), (resolve_cb),
	(browse_cb):
	* src/bookmarks/ephy-bookmarks.h:

	Fix removing zeroconf bookmarks when the service disappears,
	and updating them when they reappear. Bugs #329637, #330883.

2006-02-13  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks-editor.c: (cmd_toolbar):

	Place bookmarks on "BookmarksBar" toolbar, since
	that's what < 1.9 used too.

2006-02-12  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/ephy-net-monitor.c: (ephy_net_monitor_check_for_active_device):

	Doesn't return the right variable !
	Add a LOG to trace EphyNetworkMonitor's check for active device.
