@@ -1,5 +1,16 @@
 2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
 	
+	* data/default-prefs-common.js:
+
+	Also use exthandler for snews and nntp.
+	
+	* data/default-prefs-toolkit.js:
+
+	Add password manager prefs, since xulrunner is
+	missing them.
+
+2006-02-14  Christian Persch  <chpe@cvs.gnome.org>
+	
 	* src/bookmarks/ephy-bookmarks-export.c: (write_rdf):
 
 	Don't export the local bookmarks.
